--- a/package.json
+++ b/package.json
@@ -6,28 +6,39 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "eslintConfig": {
+    "extends": [
+      "wesbos"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
+    "@vitejs/plugin-react": "^3.1.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "vite": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.35.0",
+    "eslint-config-wesbos": "^3.2.3",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.1.0"
+    "typescript": "^4.9.5"
   }
 }
